--- a/projeto-gamer-manha/index.html
+++ b/projeto-gamer-manha/index.html
@@ -13,9 +13,11 @@
 
     <header>
 
+        <!-- Linha de cima com a borda amarela -->
+
         <div class="header-top">
-            <div class="layout-grid">
-                <div class="contatos">
+            <div class="layout-grid alinhamento-between-center">
+                <div class="contatos ">
                     <div class="phone">
                         <img src="./assets/icons/icone_telefone.svg" alt="Ícone de telefone">
                         <span>(11) 0900-1010</span>
@@ -42,7 +44,9 @@
 
         <div class="header-bottom">
             <div class="layout-grid alinhamento-between-center">
+
                 <!-- menu hamburger -->
+
                 <img onclick="mostrarMenu()" src="./assets/icons/bars.svg" class="menu-hamburger"
                     alt="Ícone para abrir e fechar o menu de celular">
 
@@ -80,6 +84,7 @@
                 </nav>
 
                 <!-- menu 3 pontinhos -->
+
                 <img onclick="mostrarUsuarios()" src="./assets/icons/pointers.svg" class="menu-pontinhos"
                     alt="Ícone 3 pontinhos, abre o menu de usuários">
 
