--- a/projeto-gamer/index.html
+++ b/projeto-gamer/index.html
@@ -71,7 +71,7 @@
 
                     <div class="midias-sociais">
                         <a href="">
-                            <img src="./assets/icons/facebook.svg" alt="Imagem link do Facebook da empresa Gamer">
+                            <img src="assets/icons/facebbok.png" alt="Imagem link do Facebook da empresa Gamer">
                         </a>
                         <a href="">
                             <img src="./assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa Gamer">
