projeto gamer finalizando

--- a/projeto-gamer/login.html
+++ b/projeto-gamer/login.html
@@ -109,7 +109,7 @@
 
             <div class="login-title">
                 <hr class="login-line">
-                <h1>Login</h1>
+                <h1>LOGIN</h1>
             </div>
 
             <div class="frm-linha">
@@ -216,14 +216,17 @@
                 </form>
             </div>
 
-        </div> <!-- fim da footer-top -->
+        </div>
+        
+        <!-- fim da footer-top -->
 
 
         <div class="layout-grid footer-bottom">
+            <img src="./assets/icons/back-to-top.svg" alt="Ícone com a seta para cima, clique para voltar ao topo"id= botaovoltar>
             <p id="rights">&copy;Todos os diretos reservados</p>
         </div>
 
-        <img src="./assets/icons/back-to-top.svg" alt="Ícone com a seta para cima, clique para voltar ao topo">
+
 
     </footer>
 
