projeto gamer finalizando

--- a/projeto-gamer/equipes.html
+++ b/projeto-gamer/equipes.html
@@ -117,22 +117,22 @@
             </div>
 
             <div class="frm-linha">
-                <p>Digite o id da sua equipe:</p>
+                <input type="text">
             </div>
 
             <div class="frm-linha">
-             <p>Digite o nome da sua equipe:</p>
+             <input type="text">
 
             </div>
 
             <div class="frm-img">
-                <p> Imagem da sua Equipes</p>
+               <input type="file">
             </div>
 
-            <div >
+            <!-- <div >
                 <p>Nenhuma imagem encontrada</p>
 
-            </div>
+            </div> -->
             
             <div>
                 <button class="btn-cadastro">Cadastro</button>
