projeto gamer finalizado

--- a/projeto-gamer/equipes.html
+++ b/projeto-gamer/equipes.html
@@ -117,11 +117,13 @@
             </div>
 
             <div class="frm-linha">
-                <input type="text">
+                <input type="text" placeholder="Digite o Id da sua equipe:">
+                <p></p>
             </div>
 
             <div class="frm-linha">
-             <input type="text">
+             <input type="text" placeholder="Digite o nome da sua equipe:">
+          
 
             </div>
 
